// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-checkbox-group-beta #render should render component as expected (1) 1`] = `
<gux-form-field-checkbox-group-beta>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot name="group-checkbox">
      </slot>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-checkbox>
</gux-form-field-checkbox-group-beta>
`;

exports[`gux-form-field-checkbox-group-beta #render should render component as expected (2) 1`] = `
<gux-form-field-checkbox-group-beta>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food Subject to availibility
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot name="group-checkbox">
      </slot>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error gux-show">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="sandwich" disabled="">
    <label slot="label">
      Sandwich
    </label>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="spaghetti">
    <label slot="label">
      Spaghetti
    </label>
    <span slot="help">
      This is a help message
    </span>
  </gux-form-field-checkbox>
  <span slot="group-error">
    Subject to availibility
  </span>
</gux-form-field-checkbox-group-beta>
`;

exports[`gux-form-field-checkbox-group-beta #render should render component as expected (3) 1`] = `
<gux-form-field-checkbox-group-beta>
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food This is a group help message
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot name="group-checkbox">
      </slot>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help gux-show">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="sandwich" disabled="">
    <label slot="label">
      Sandwich
    </label>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="sushi">
    <label slot="label">
      Sushi
    </label>
    <span slot="error">
      Subject to availibility
    </span>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="spaghetti">
    <label slot="label">
      Spaghetti
    </label>
    <span slot="help">
      This is a help message
    </span>
  </gux-form-field-checkbox>
  <span slot="group-help">
    This is a group help message
  </span>
</gux-form-field-checkbox-group-beta>
`;

exports[`gux-form-field-checkbox-group-beta #render should render component as expected (4) 1`] = `
<gux-form-field-checkbox-group-beta disabled="">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot name="group-checkbox">
      </slot>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="sandwich" disabled="">
    <label slot="label">
      Sandwich
    </label>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="sushi">
    <label slot="label">
      Sushi
    </label>
    <span slot="error">
      Subject to availibility
    </span>
  </gux-form-field-checkbox>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="spaghetti">
    <label slot="label">
      Spaghetti
    </label>
    <span slot="help">
      This is a help message
    </span>
  </gux-form-field-checkbox>
</gux-form-field-checkbox-group-beta>
`;

exports[`gux-form-field-checkbox-group-beta #render should render component as expected (5) 1`] = `
<gux-form-field-checkbox-group-beta required="">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food Required
      </legend>
      <div class="gux-form-field-visual-label gux-above gux-required" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="required" required="">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot name="group-checkbox">
      </slot>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-checkbox>
</gux-form-field-checkbox-group-beta>
`;

exports[`gux-form-field-checkbox-group-beta #render should render component as expected (6) 1`] = `
<gux-form-field-checkbox-group-beta indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-above">
      <legend class="gux-form-field-screenreader-label">
        Food
      </legend>
      <div class="gux-form-field-visual-label gux-above" role="presentation">
        <slot name="group-label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="group-label-info">
        </slot>
      </div>
      <slot name="group-checkbox">
      </slot>
      <slot>
      </slot>
      <div role="alert" class="gux-form-field-error">
        <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
        </gux-icon>
        <div class="gux-message">
          <slot name="group-error">
          </slot>
        </div>
      </div>
      <div class="gux-form-field-help">
        <div class="gux-message">
          <slot name="group-help">
          </slot>
        </div>
      </div>
    </fieldset>
  </template>
  <label slot="group-label">
    Food
  </label>
  <gux-form-field-checkbox>
    <input slot="input" type="checkbox" name="food-1" value="pizza">
    <label slot="label">
      Pizza
    </label>
  </gux-form-field-checkbox>
</gux-form-field-checkbox-group-beta>
`;
